# QuaRot_Re-Implementation_on_Llama_3.2_1B

./: README.md  graph_version.py  hadamard_utils.py  main.py  model_utils.py  pyproject.toml  quant_utils.py  rotation_utils.py  utils.py
