[project]
name = "quarot-re-implementation-on-llama-3-2-1b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "hadamard-transform>=0.1.3",
    "huggingface-hub>=0.36.0",
    "scipy>=1.15.3",
    "torch==2.7",
    "transformers==4.52",
    "wandb>=0.23.1",
]
